--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,5 @@
 html, body {
-	font: 14px/1.21 'Helvetica Neue', arial, sans-serif;
-	font-weight: 400;
-}
-
-h1 {
-	text-align: center;
+  font-family: Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
 }
